# DiscoDalle

./: README.md  pyproject.toml
src/: dd_errors.py  logger_config.py  main.py  messenger.py  openai_service.py  resources.py
src/cogs/: dalle_commands.py
